# makenziehoward.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
_site/: about.html  index.html  search.json
docs/: about.html  index.html
